--- a/index.html
+++ b/index.html
@@ -1,90 +1,143 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Västra RP – Start</title>
-<meta name="description" content="Västra RP – Svensk FiveM RP. Prioritet, scripts, regler och ansökan." />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<style>
-:root{
---bg:#0c1222; --panel:#0f1530; --card:#121a3b; --text:#e7eaf6; --muted:#b8c0e0;
---accent:#16a34a; --accent-2:#0ea5e9; --yellow:#ffd200; --border:rgba(255,255,255,.08);
---ring:rgba(14,165,233,.35); --shadow:0 10px 30px rgba(0,0,0,.45); --radius:16px;
-}
-*{box-sizing:border-box}
-body{margin:0;background:radial-gradient(1200px 800px at -10% -10%, rgba(14,165,233,.18), transparent),
-radial-gradient(1200px 800px at 110% -10%, rgba(22,163,74,.14), transparent), var(--bg);
-color:var(--text);font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif}
-a{color:inherit;text-decoration:none}
-.container{width:min(1100px,100% - 2rem);margin-inline:auto}
-header{position:sticky;top:0;z-index:50;background:rgba(12,18,34,.7);backdrop-filter:blur(10px);border-bottom:1px solid var(--border)}
-.nav{display:flex;align-items:center;justify-content:space-between;padding:.75rem 0}
-.brand{display:flex;align-items:center;gap:.6rem;font-weight:700}
-.brand svg{width:28px;height:28px}
-.navlinks{display:flex;gap:.6rem}
-.navlinks a{padding:.55rem .8rem;border-radius:10px;color:var(--muted)}
-.navlinks a:hover{background:rgba(255,255,255,.06);color:var(--text)}
-.btn{display:inline-flex;align-items:center;gap:.6rem;padding:.8rem 1rem;border-radius:999px;border:1px solid var(--border);background:linear-gradient(180deg,#16a34a,#148a3f);color:#fff;font-weight:600;box-shadow:var(--shadow)}
-.btn.alt{background:linear-gradient(180deg,#0ea5e9,#0b83bf)}
-.btn.ghost{background:transparent;color:var(--text)}
-.menu{display:none}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Västra RP – Start</title>
+  <meta name="description" content="Västra RP – Svensk FiveM RP. Prioritet, scripts, regler och ansökan." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#0c1222; --panel:#0f1530; --card:#121a3b; --text:#e7eaf6; --muted:#b8c0e0;
+      --accent:#16a34a; --accent-2:#0ea5e9; --yellow:#ffd200; --border:rgba(255,255,255,.08);
+      --ring:rgba(14,165,233,.35); --shadow:0 10px 30px rgba(0,0,0,.45); --radius:16px;
+    }
+    *{box-sizing:border-box}
+    body{margin:0;background:radial-gradient(1200px 800px at -10% -10%, rgba(14,165,233,.18), transparent),
+                               radial-gradient(1200px 800px at 110% -10%, rgba(22,163,74,.14), transparent), var(--bg);
+      color:var(--text);font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif}
+    a{color:inherit;text-decoration:none}
+    .container{width:min(1100px,100% - 2rem);margin-inline:auto}
+    header{position:sticky;top:0;z-index:50;background:rgba(12,18,34,.7);backdrop-filter:blur(10px);border-bottom:1px solid var(--border)}
+    .nav{display:flex;align-items:center;justify-content:space-between;padding:.75rem 0}
+    .brand{display:flex;align-items:center;gap:.6rem;font-weight:700}
+    .brand svg{width:28px;height:28px}
+    .navlinks{display:flex;gap:.6rem}
+    .navlinks a{padding:.55rem .8rem;border-radius:10px;color:var(--muted)}
+    .navlinks a:hover{background:rgba(255,255,255,.06);color:var(--text)}
+    .btn{display:inline-flex;align-items:center;gap:.6rem;padding:.8rem 1rem;border-radius:999px;border:1px solid var(--border);background:linear-gradient(180deg,#16a34a,#148a3f);color:#fff;font-weight:600;box-shadow:var(--shadow)}
+    .btn.alt{background:linear-gradient(180deg,#0ea5e9,#0b83bf)}
+    .btn.ghost{background:transparent;color:var(--text)}
+    .menu{display:none}
 
+    .hero{padding:6rem 0 4rem; min-height: calc(100vh - 80px);}
+    .hero-grid{display:grid;grid-template-columns:1fr;gap:2rem;align-items:center}
+    h1{font-size:clamp(2rem,3.5vw,3rem);line-height:1.08;margin:.4rem 0}
+    .muted{color:var(--muted)}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow)}
+    .p-2{padding:1.2rem}
+    .section{padding:3rem 0}
+    h2{font-size:clamp(1.35rem,2vw,1.9rem);margin:0 0 1rem}
 
-.hero{padding:min(12vh,5rem) 0 4rem}
-.hero-grid{display:grid;grid-template-columns:1.2fr .8fr;gap:2rem;align-items:center}
-h1{font-size:clamp(2rem,3.5vw,3rem);line-height:1.08;margin:.4rem 0}
-.muted{color:var(--muted)}
-.card{background:var(--card);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow)}
-.p-2{padding:1.2rem}
-.section{padding:3rem 0}
-h2{font-size:clamp(1.35rem,2vw,1.9rem);margin:0 0 1rem}
+    .pricing{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem}
+    .pricing .plan{position:relative}
+    .plan h3{margin:.3rem 0 .2rem}
+    .price{font-size:1.35rem;font-weight:700}
+    .bullets{margin:.6rem 0 1rem}
+    .bullets li{margin:.35rem 0;color:var(--muted)}
 
+    .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem}
 
-.pricing{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem}
-.pricing .plan{position:relative}
-.plan h3{margin:.3rem 0 .2rem}
-.price{font-size:1.35rem;font-weight:700}
-.bullets{margin:.6rem 0 1rem}
-.bullets li{margin:.35rem 0;color:var(--muted)}
+    details summary{cursor:pointer}
+    footer{border-top:1px solid var(--border);padding:2rem 0;color:var(--muted)}
 
-
-.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem}
-
-
-details summary{cursor:pointer}
-footer{border-top:1px solid var(--border);padding:2rem 0;color:var(--muted)}
-
-
-@media (max-width: 960px){
-.hero-grid{grid-template-columns:1fr}
-.pricing{grid-template-columns:1fr 1fr}
-.grid-3{grid-template-columns:1fr}
-.navlinks{display:none}
-.menu{display:inline-flex}
-}
-:is(a,button,.btn,input,textarea,select):focus{outline:none;box-shadow:0 0 0 6px var(--ring)}
-</style>
+    @media (max-width: 960px){
+      .hero-grid{grid-template-columns:1fr}
+      .pricing{grid-template-columns:1fr 1fr}
+      .grid-3{grid-template-columns:1fr}
+      .navlinks{display:none}
+      .menu{display:inline-flex}
+    }
+    :is(a,button,.btn,input,textarea,select):focus{outline:none;box-shadow:0 0 0 6px var(--ring)}
+  </style>
 </head>
 <body>
-<header>
-<div class="container nav">
-<a href="#top" class="brand" aria-label="Hem">
-<svg viewBox="0 0 64 64" aria-hidden="true" role="img"><circle cx="32" cy="32" r="30" fill="#1f2a4d" opacity=".5"/><rect x="11" y="22" width="42" height="20" rx="4" fill="#2b3a67"/><rect x="11" y="30" width="42" height="4" fill="#ffd200"/><rect x="26" y="22" width="4" height="20" fill="#ffd200"/></svg>
-<span>Västra RP</span>
-</a>
-<nav class="navlinks">
-</nav>
-<div style="display:flex;gap:.6rem;align-items:center">
-<a class="btn ghost" href="https://discord.gg/3wRYxTPCU8" target="_blank" rel="noopener">Gå till Discord</a>
-<a class="btn alt" href="ansokan.html">Ansök nu</a>
-<button class="btn ghost menu" id="menuBtn">☰</button>
-</div>
-</div>
-</header>
+  <header>
+    <div class="container nav">
+      <a href="#top" class="brand" aria-label="Hem">
+        <svg viewBox="0 0 64 64" aria-hidden="true" role="img"><circle cx="32" cy="32" r="30" fill="#1f2a4d" opacity=".5"/><rect x="11" y="22" width="42" height="20" rx="4" fill="#2b3a67"/><rect x="11" y="30" width="42" height="4" fill="#ffd200"/><rect x="26" y="22" width="4" height="20" fill="#ffd200"/></svg>
+        <span>Västra RP</span>
+      </a>
+      <nav class="navlinks">
+      </nav>
+      <div style="display:flex;gap:.6rem;align-items:center">
+        <a class="btn ghost" href="https://discord.gg/3wRYxTPCU8" target="_blank" rel="noopener">Gå till Discord</a>
+        <a class="btn alt" href="ansokan.html">Ansök nu</a>
+        <button class="btn ghost menu" id="menuBtn">☰</button>
+      </div>
+    </div>
+  </header>
 
+  <div id="mobileMenu" hidden style="border-bottom:1px solid var(--border);background:rgba(12,18,34,.9);backdrop-filter:blur(10px)">
+    <div class="container" style="padding:.6rem 0 1rem;display:grid;gap:.5rem">
+      <a class="btn ghost" href="https://discord.gg/3wRYxTPCU8" target="_blank" rel="noopener">Gå till Discord</a>
+      <a class="btn alt" href="ansokan.html">Ansök nu</a>
+    </div>
+  </div>
 
-<div id="mobileMenu" hidden style="border-bottom:1px solid var(--border);background:rgba(12,18,34,.9);backdrop-filter:blur(10px)">
+  <main id="top" class="hero">
+    <div class="container hero-grid">
+      <section>
+        <div class="chip" style="display:inline-flex;align-items:center;gap:.5rem;padding:.35rem .7rem;border:1px solid var(--border);border-radius:999px;color:var(--muted);backdrop-filter:blur(6px)">Svensk FiveM • Serious RP</div>
+        <h1>Västra RP – <span style="background:linear-gradient(90deg,#8fc8ff,#34d399);-webkit-background-clip:text;background-clip:text;color:transparent">stabil & modern</span> RP‑upplevelse</h1>
+        <p class="muted">Balanserad ekonomi, svenska fraktioner och en välkomnande community. Välj prioritet, ansök och hoppa in.</p>
+        <div style="display:flex;gap:.6rem;flex-wrap:wrap;margin-top:1rem">
+          <a class="btn alt" href="ansokan.html">Ansök nu</a>
+          <a class="btn" href="https://discord.gg/3wRYxTPCU8" target="_blank" rel="noopener">Gå till Discord</a>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container" style="display:grid;grid-template-columns:1fr auto;gap:2rem;align-items:start">
+      <!-- Vänster: logga + e‑post + copyright -->
+      <div>
+        <div class="brand" style="gap:.5rem;margin-bottom:.6rem">
+          <svg viewBox="0 0 64 64" aria-hidden="true" role="img"><circle cx="32" cy="32" r="30" fill="#1f2a4d" opacity=".5"/></svg>
+          <b>Västra RP</b>
+        </div>
+        <p style="margin:.2rem 0 1rem"><a class="muted" style="text-decoration:underline" href="mailto:kontakt@vastrarp.se">kontakt@vastrarp.se</a></p>
+        <hr style="border:0;border-top:1px solid var(--border);margin:1rem 0"/>
+        <div class="muted">© <span id="year"></span>. All rights reserved</div>
+      </div>
+
+      <!-- Höger: sidor + policy -->
+      <aside style="min-width:200px">
+        <h3 style="margin:0 0 .5rem;font-size:1rem">Sidor</h3>
+        <nav style="display:grid;gap:.4rem">
+          <a class="muted" href="faq.html">FAQ</a>
+          <a class="muted" href="regler.html">Regler</a>
+        </nav>
+        <hr style="border:0;border-top:1px solid var(--border);margin:1rem 0"/>
+        <div style="display:flex;gap:1rem;flex-wrap:wrap">
+          <a class="muted" href="privacy.html">Privacy Policy</a>
+          <a class="muted" href="terms.html">Terms of Service</a>
+        </div>
+      </aside>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+    const menuBtn = document.getElementById('menuBtn');
+    const mobile = document.getElementById('mobileMenu');
+    if(menuBtn){menuBtn.addEventListener('click',()=>{mobile.toggleAttribute('hidden');});}
+    document.querySelectorAll('a[href^="#"]').forEach(a=>{
+      a.addEventListener('click',e=>{const t=document.querySelector(a.getAttribute('href'));if(t){e.preventDefault();t.scrollIntoView({behavior:'smooth'});mobile.setAttribute('hidden','');}})
+    });
+  </script>
+</body>
 </html>
