--- a/faq.html
+++ b/faq.html
@@ -60,7 +60,7 @@
         </details>
         <details>
           <summary><b>Vilken åldersgräns har ni?</b></summary>
-          <p class="muted">Åldersgräns: <b>[fyll i]</b>. Undantag kan förekomma vid mycket god mognad.</p>
+          <p class="muted">Åldersgräns: <b>[18]</b>. Undantag kan förekomma vid mycket god mognad.</p>
         </details>
         <details>
           <summary><b>Är servern whitelistad?</b></summary>
@@ -68,11 +68,11 @@
         </details>
         <details>
           <summary><b>Hur länge tar det att få svar?</b></summary>
-          <p class="muted">Normalt <b>[fyll i]</b>. Hög belastning eller helger kan ge längre väntetid.</p>
+          <p class="muted">Normalt <b>[1 time ]</b>. Hög belastning eller helger kan ge längre väntetid.</p>
         </details>
         <details>
           <summary><b>Får man spela på andra servrar samtidigt?</b></summary>
-          <p class="muted">Ja, men kom ihåg att följa våra regler och undvik metagaming mellan servrar.</p>
+          <p class="muted">Får man spela på andra serverar om man har whitelist på västra ?.</p>
         </details>
         <details>
           <summary><b>Var hittar jag fullständiga regler?</b></summary>
