--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <section>
         <div class="chip" style="display:inline-flex;align-items:center;gap:.5rem;padding:.35rem .7rem;border:1px solid var(--border);border-radius:999px;color:var(--muted);backdrop-filter:blur(6px)">Svensk FiveM • Serious RP</div>
         <h1>Västra RP – <span style="background:linear-gradient(90deg,#8fc8ff,#34d399);-webkit-background-clip:text;background-clip:text;color:transparent">stabil & modern</span> RP‑upplevelse</h1>
-        <p class="muted">Balanserad ekonomi, svenska fraktioner och en välkomnande community. Välj prioritet, ansök och hoppa in.</p>
+        <p class="muted">Balanserad ekonomi, svenska fraktioner och en välkomnande community. ansök och hoppa in.</p>
         <div style="display:flex;gap:.6rem;flex-wrap:wrap;margin-top:1rem">
           <a class="btn alt" href="ansokan.html">Ansök nu</a>
           <a class="btn" href="https://discord.gg/3wRYxTPCU8" target="_blank" rel="noopener">Gå till Discord</a>
