--- a/faq.html
+++ b/faq.html
@@ -72,7 +72,7 @@
         </details>
         <details>
           <summary><b>Får man spela på andra servrar samtidigt?</b></summary>
-          <p class="muted">Får man spela på andra serverar om man har whitelist på västra ?.</p>
+          <p class="muted">Ja, vi ser inga problem med att du rollspelar på andra serverar – även om vi naturligtvis helst ser att du spelar hos oss?.</p>
         </details>
         <details>
           <summary><b>Var hittar jag fullständiga regler?</b></summary>
