--- a/index.html
+++ b/index.html
@@ -139,5 +139,6 @@
       a.addEventListener('click',e=>{const t=document.querySelector(a.getAttribute('href'));if(t){e.preventDefault();t.scrollIntoView({behavior:'smooth'});mobile.setAttribute('hidden','');}})
     });
   </script>
+    <script src="auth.js"></script>
 </body>
 </html>
