--- a/regler.html
+++ b/regler.html
@@ -172,5 +172,6 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+    <script src="auth.js"></script>
 </body>
 </html>
