--- a/faq.html
+++ b/faq.html
@@ -115,5 +115,6 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+    <script src="auth.js"></script>
 </body>
 </html>
