--- a/ansokan.html
+++ b/ansokan.html
@@ -255,5 +255,6 @@
       finally{ $$('input,textarea,button', form).forEach(x=>x.disabled=false); }
     });
   </script>
+    <script src="auth.js"></script>
 </body>
 </html>
