--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     .btn{display:inline-flex;align-items:center;gap:.6rem;padding:.8rem 1rem;border-radius:999px;border:1px solid var(--border);background:linear-gradient(180deg,#16a34a,#148a3f);color:#fff;font-weight:600;box-shadow:var(--shadow)}
     .btn.alt{background:linear-gradient(180deg,#0ea5e9,#0b83bf)}
     .btn.ghost{background:transparent;color:var(--text)}
+    .chip{display:inline-flex;align-items:center;gap:.5rem;padding:.35rem .7rem;border:1px solid var(--border);border-radius:999px;color:var(--muted);backdrop-filter:blur(6px)}
     .menu{display:none}
 
     .hero{padding:6rem 0 4rem; min-height: calc(100vh - 80px);}
@@ -41,30 +42,14 @@
     .section{padding:3rem 0}
     h2{font-size:clamp(1.35rem,2vw,1.9rem);margin:0 0 1rem}
 
-    .pricing{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem}
-    .pricing .plan{position:relative}
-    .plan h3{margin:.3rem 0 .2rem}
-    .price{font-size:1.35rem;font-weight:700}
-    .bullets{margin:.6rem 0 1rem}
-    .bullets li{margin:.35rem 0;color:var(--muted)}
-
-    .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem}
-
-    details summary{cursor:pointer}
     footer{border-top:1px solid var(--border);padding:2rem 0;color:var(--muted)}
 
     @media (max-width: 960px){
       .hero-grid{grid-template-columns:1fr}
-      .pricing{grid-template-columns:1fr 1fr}
-      .grid-3{grid-template-columns:1fr}
       .navlinks{display:none}
       .menu{display:inline-flex}
     }
     :is(a,button,.btn,input,textarea,select):focus{outline:none;box-shadow:0 0 0 6px var(--ring)}
-      /* Login modal */
-  .modal{position:fixed;inset:0;background:rgba(0,0,0,.6);display:flex;align-items:center;justify-content:center;z-index:100}
-  .modal .box{width:min(420px,100% - 2rem);background:var(--card);border:1px solid var(--border);border-radius:16px;box-shadow:var(--shadow);padding:1.2rem}
-  .modal .row{display:grid;grid-template-columns:1fr;gap:.6rem}
   </style>
 </head>
 <body>
@@ -74,11 +59,13 @@
         <svg viewBox="0 0 64 64" aria-hidden="true" role="img"><circle cx="32" cy="32" r="30" fill="#1f2a4d" opacity=".5"/><rect x="11" y="22" width="42" height="20" rx="4" fill="#2b3a67"/><rect x="11" y="30" width="42" height="4" fill="#ffd200"/><rect x="26" y="22" width="4" height="20" fill="#ffd200"/></svg>
         <span>Västra RP</span>
       </a>
-      <nav class="navlinks">
-      </nav>
+      <nav class="navlinks"></nav>
       <div style="display:flex;gap:.6rem;align-items:center">
-        <a class="btn ghost" href="https://discord.gg/3wRYxTPCU8" target="_blank" rel="noopener">Gå till Discord</a>
-        <a class="btn alt" href="ansokan.html">Ansök nu</a>
+        <span id="userChip" class="chip" style="display:none">Inloggad som <b id="userName"></b></span>
+        <button class="btn ghost" id="loginBtn">Logga in</button>
+        <button class="btn ghost" id="logoutBtn" style="display:none">Logga ut</button>
+        <a class="btn alt" id="applyBtn" href="ansokan.html">Ansök nu</a>
+        <a class="btn" href="https://discord.gg/3wRYxTPCU8" target="_blank" rel="noopener">Gå till Discord</a>
         <button class="btn ghost menu" id="menuBtn">☰</button>
       </div>
     </div>
@@ -87,11 +74,11 @@
   <main id="top" class="hero">
     <div class="container hero-grid">
       <section>
-        <div class="chip" style="display:inline-flex;align-items:center;gap:.5rem;padding:.35rem .7rem;border:1px solid var(--border);border-radius:999px;color:var(--muted);backdrop-filter:blur(6px)">Svensk FiveM • Serious RP</div>
-        <h1>Västra RP – <span style="background:linear-gradient(90deg,#8fc8ff,#34d399);-webkit-background-clip:text;background-clip:text;color:transparent">stabil & modern</span> RP‑upplevelse</h1>
+        <div class="chip">Svensk FiveM • Serious RP</div>
+        <h1>Västra RP – <span style="background:linear-gradient(90deg,#8fc8ff,#34d399);-webkit-background-clip:text;background-clip:text;color:transparent">stabil & modern</span> RP-upplevelse</h1>
         <p class="muted">Balanserad ekonomi, svenska fraktioner och en välkomnande community. ansök och hoppa in.</p>
         <div style="display:flex;gap:.6rem;flex-wrap:wrap;margin-top:1rem">
-          <a class="btn alt" href="ansokan.html">Ansök nu</a>
+          <a class="btn alt" id="applyBtnHero" href="ansokan.html">Ansök nu</a>
           <a class="btn" href="https://discord.gg/3wRYxTPCU8" target="_blank" rel="noopener">Gå till Discord</a>
         </div>
       </section>
@@ -100,7 +87,6 @@
 
   <footer>
     <div class="container" style="display:grid;grid-template-columns:1fr auto;gap:2rem;align-items:start">
-      <!-- Vänster: logga + e‑post + copyright -->
       <div>
         <div class="brand" style="gap:.5rem;margin-bottom:.6rem">
           <svg viewBox="0 0 64 64" aria-hidden="true" role="img"><circle cx="32" cy="32" r="30" fill="#1f2a4d" opacity=".5"/></svg>
@@ -110,8 +96,6 @@
         <hr style="border:0;border-top:1px solid var(--border);margin:1rem 0"/>
         <div class="muted">© <span id="year"></span>. All rights reserved</div>
       </div>
-
-      <!-- Höger: sidor + policy -->
       <aside style="min-width:200px">
         <h3 style="margin:0 0 .5rem;font-size:1rem">Sidor</h3>
         <nav style="display:grid;gap:.4rem">
@@ -128,13 +112,54 @@
   </footer>
 
   <script>
+    // --- Konfig ---
+    const AUTH_URL = "https://discord.com/oauth2/authorize?client_id=1411631069978951701&response_type=code&redirect_uri=https%3A%2F%2Fvikketv.github.io%2FVastraRP%2Fauth%2Fdiscord&scope=role_connections.write+identify";
+    const AUTH_KEY = "vastra_auth"; // localStorage-nyckel (sätts på /auth/discord)
+
+    // Allmänt
     document.getElementById('year').textContent = new Date().getFullYear();
-    const menuBtn = document.getElementById('menuBtn');
-    const mobile = document.getElementById('mobileMenu');
-    if(menuBtn){menuBtn.addEventListener('click',()=>{mobile.toggleAttribute('hidden');});}
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click',e=>{const t=document.querySelector(a.getAttribute('href'));if(t){e.preventDefault();t.scrollIntoView({behavior:'smooth'});mobile.setAttribute('hidden','');}})
-    });
+    const $ = (q,ctx=document)=>ctx.querySelector(q);
+
+    // Läs session
+    function getSession(){
+      try{ return JSON.parse(localStorage.getItem(AUTH_KEY)); }catch(_){ return null; }
+    }
+    function setUI(session){
+      const chip = $('#userChip'), nameEl = $('#userName'), loginBtn = $('#loginBtn'), logoutBtn = $('#logoutBtn');
+      if(session){
+        chip.style.display = 'inline-flex';
+        nameEl.textContent = session.name || 'Discord-inloggad';
+        loginBtn.style.display = 'none';
+        logoutBtn.style.display = 'inline-flex';
+      }else{
+        chip.style.display = 'none';
+        loginBtn.style.display = 'inline-flex';
+        logoutBtn.style.display = 'none';
+      }
+    }
+
+    // Login/Logout
+    $('#loginBtn')?.addEventListener('click', ()=> location.href = AUTH_URL);
+    $('#logoutBtn')?.addEventListener('click', ()=> { localStorage.removeItem(AUTH_KEY); setUI(null); });
+
+    // Gating för ansökan
+    function goApply(e){
+      const s = getSession();
+      if(!s){
+        e.preventDefault();
+        location.href = AUTH_URL; // kräver inloggning först
+      }
+    }
+    $('#applyBtn')?.addEventListener('click', goApply);
+    $('#applyBtnHero')?.addEventListener('click', goApply);
+
+    // Auto-loginflow om man kom med ?login=required
+    if(new URLSearchParams(location.search).get('login') === 'required'){
+      location.replace(AUTH_URL);
+    }
+
+    // Init UI
+    setUI(getSession());
   </script>
 </body>
 </html>
