--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,59 +10,219 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    :root{
-      --bg:#0c1222; --panel:#0f1530; --card:#121a3b; --text:#e7eaf6; --muted:#b8c0e0;
-      --accent:#16a34a; --accent-2:#0ea5e9; --yellow:#ffd200; --border:rgba(255,255,255,.08);
-      --ring:rgba(14,165,233,.35); --shadow:0 10px 30px rgba(0,0,0,.45); --radius:16px;
+    :root {
+      --bg: #0c1222;
+      --panel: #0f1530;
+      --card: #121a3b;
+      --text: #e7eaf6;
+      --muted: #b8c0e0;
+      --accent: #16a34a;
+      --accent-2: #0ea5e9;
+      --yellow: #ffd200;
+      --border: rgba(255, 255, 255, .08);
+      --ring: rgba(14, 165, 233, .35);
+      --shadow: 0 10px 30px rgba(0, 0, 0, .45);
+      --radius: 16px;
     }
-    *{box-sizing:border-box}
-    body{margin:0;background:radial-gradient(1200px 800px at -10% -10%, rgba(14,165,233,.18), transparent),
-                               radial-gradient(1200px 800px at 110% -10%, rgba(22,163,74,.14), transparent), var(--bg);
-      color:var(--text);font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif}
-    a{color:inherit;text-decoration:none}
-    .container{width:min(1100px,100% - 2rem);margin-inline:auto}
-    header{position:sticky;top:0;z-index:50;background:rgba(12,18,34,.7);backdrop-filter:blur(10px);border-bottom:1px solid var(--border)}
-    .nav{display:flex;align-items:center;justify-content:space-between;padding:.75rem 0}
-    .brand{display:flex;align-items:center;gap:.6rem;font-weight:700}
-    .brand svg{width:28px;height:28px}
-    .navlinks{display:flex;gap:.6rem}
-    .navlinks a{padding:.55rem .8rem;border-radius:10px;color:var(--muted)}
-    .navlinks a:hover{background:rgba(255,255,255,.06);color:var(--text)}
-    .btn{display:inline-flex;align-items:center;gap:.6rem;padding:.8rem 1rem;border-radius:999px;border:1px solid var(--border);background:linear-gradient(180deg,#16a34a,#148a3f);color:#fff;font-weight:600;box-shadow:var(--shadow)}
-    .btn.alt{background:linear-gradient(180deg,#0ea5e9,#0b83bf)}
-    .btn.ghost{background:transparent;color:var(--text)}
-    .chip{display:inline-flex;align-items:center;gap:.5rem;padding:.35rem .7rem;border:1px solid var(--border);border-radius:999px;color:var(--muted);backdrop-filter:blur(6px)}
-    .menu{display:none}
 
-    .hero{padding:6rem 0 4rem; min-height: calc(100vh - 80px);}
-    .hero-grid{display:grid;grid-template-columns:1fr;gap:2rem;align-items:center}
-    h1{font-size:clamp(2rem,3.5vw,3rem);line-height:1.08;margin:.4rem 0}
-    .muted{color:var(--muted)}
-    .card{background:var(--card);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow)}
-    .p-2{padding:1.2rem}
-    .section{padding:3rem 0}
-    h2{font-size:clamp(1.35rem,2vw,1.9rem);margin:0 0 1rem}
-
-    footer{border-top:1px solid var(--border);padding:2rem 0;color:var(--muted)}
-
-    @media (max-width: 960px){
-      .hero-grid{grid-template-columns:1fr}
-      .navlinks{display:none}
-      .menu{display:inline-flex}
+    * {
+      box-sizing: border-box
     }
-    :is(a,button,.btn,input,textarea,select):focus{outline:none;box-shadow:0 0 0 6px var(--ring)}
+
+    .chip.user img {
+      width: 22px;
+      height: 22px;
+      border-radius: 999px;
+      object-fit: cover;
+      border: 1px solid var(--border)
+    }
+
+    body {
+      margin: 0;
+      background: radial-gradient(1200px 800px at -10% -10%, rgba(14, 165, 233, .18), transparent),
+        radial-gradient(1200px 800px at 110% -10%, rgba(22, 163, 74, .14), transparent), var(--bg);
+      color: var(--text);
+      font-family: Poppins, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none
+    }
+
+    .container {
+      width: min(1100px, 100% - 2rem);
+      margin-inline: auto
+    }
+
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 50;
+      background: rgba(12, 18, 34, .7);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid var(--border)
+    }
+
+    .nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: .75rem 0
+    }
+
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: .6rem;
+      font-weight: 700
+    }
+
+    .brand svg {
+      width: 28px;
+      height: 28px
+    }
+
+    .navlinks {
+      display: flex;
+      gap: .6rem
+    }
+
+    .navlinks a {
+      padding: .55rem .8rem;
+      border-radius: 10px;
+      color: var(--muted)
+    }
+
+    .navlinks a:hover {
+      background: rgba(255, 255, 255, .06);
+      color: var(--text)
+    }
+
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      gap: .6rem;
+      padding: .8rem 1rem;
+      border-radius: 999px;
+      border: 1px solid var(--border);
+      background: linear-gradient(180deg, #16a34a, #148a3f);
+      color: #fff;
+      font-weight: 600;
+      box-shadow: var(--shadow)
+    }
+
+    .btn.alt {
+      background: linear-gradient(180deg, #0ea5e9, #0b83bf)
+    }
+
+    .btn.ghost {
+      background: transparent;
+      color: var(--text)
+    }
+
+    .chip {
+      display: inline-flex;
+      align-items: center;
+      gap: .5rem;
+      padding: .35rem .7rem;
+      border: 1px solid var(--border);
+      border-radius: 999px;
+      color: var(--muted);
+      backdrop-filter: blur(6px)
+    }
+
+    .menu {
+      display: none
+    }
+
+    .hero {
+      padding: 6rem 0 4rem;
+      min-height: calc(100vh - 80px);
+    }
+
+    .hero-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 2rem;
+      align-items: center
+    }
+
+    h1 {
+      font-size: clamp(2rem, 3.5vw, 3rem);
+      line-height: 1.08;
+      margin: .4rem 0
+    }
+
+    .muted {
+      color: var(--muted)
+    }
+
+    .card {
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow)
+    }
+
+    .p-2 {
+      padding: 1.2rem
+    }
+
+    .section {
+      padding: 3rem 0
+    }
+
+    h2 {
+      font-size: clamp(1.35rem, 2vw, 1.9rem);
+      margin: 0 0 1rem
+    }
+
+    footer {
+      border-top: 1px solid var(--border);
+      padding: 2rem 0;
+      color: var(--muted)
+    }
+
+    @media (max-width: 960px) {
+      .hero-grid {
+        grid-template-columns: 1fr
+      }
+
+      .navlinks {
+        display: none
+      }
+
+      .menu {
+        display: inline-flex
+      }
+    }
+
+    :is(a, button, .btn, input, textarea, select):focus {
+      outline: none;
+      box-shadow: 0 0 0 6px var(--ring)
+    }
   </style>
 </head>
+
 <body>
   <header>
     <div class="container nav">
       <a href="#top" class="brand" aria-label="Hem">
-        <svg viewBox="0 0 64 64" aria-hidden="true" role="img"><circle cx="32" cy="32" r="30" fill="#1f2a4d" opacity=".5"/><rect x="11" y="22" width="42" height="20" rx="4" fill="#2b3a67"/><rect x="11" y="30" width="42" height="4" fill="#ffd200"/><rect x="26" y="22" width="4" height="20" fill="#ffd200"/></svg>
+        <svg viewBox="0 0 64 64" aria-hidden="true" role="img">
+          <circle cx="32" cy="32" r="30" fill="#1f2a4d" opacity=".5" />
+          <rect x="11" y="22" width="42" height="20" rx="4" fill="#2b3a67" />
+          <rect x="11" y="30" width="42" height="4" fill="#ffd200" />
+          <rect x="26" y="22" width="4" height="20" fill="#ffd200" />
+        </svg>
         <span>Västra RP</span>
       </a>
       <nav class="navlinks"></nav>
       <div style="display:flex;gap:.6rem;align-items:center">
-        <span id="userChip" class="chip" style="display:none">Inloggad som <b id="userName"></b></span>
+        <span id="userChip" class="chip user" style="display:none">
+          <img id="userAvatar" alt="" />
+          <span>Inloggad som <b id="userName"></b></span>
+        </span>
         <button class="btn ghost" id="loginBtn">Logga in</button>
         <button class="btn ghost" id="logoutBtn" style="display:none">Logga ut</button>
         <a class="btn alt" id="applyBtn" href="ansokan.html">Ansök nu</a>
@@ -75,7 +236,9 @@
     <div class="container hero-grid">
       <section>
         <div class="chip">Svensk FiveM • Serious RP</div>
-        <h1>Västra RP – <span style="background:linear-gradient(90deg,#8fc8ff,#34d399);-webkit-background-clip:text;background-clip:text;color:transparent">stabil & modern</span> RP-upplevelse</h1>
+        <h1>Västra RP – <span
+            style="background:linear-gradient(90deg,#8fc8ff,#34d399);-webkit-background-clip:text;background-clip:text;color:transparent">stabil
+            & modern</span> RP-upplevelse</h1>
         <p class="muted">Balanserad ekonomi, svenska fraktioner och en välkomnande community. ansök och hoppa in.</p>
         <div style="display:flex;gap:.6rem;flex-wrap:wrap;margin-top:1rem">
           <a class="btn alt" id="applyBtnHero" href="ansokan.html">Ansök nu</a>
@@ -89,11 +252,14 @@
     <div class="container" style="display:grid;grid-template-columns:1fr auto;gap:2rem;align-items:start">
       <div>
         <div class="brand" style="gap:.5rem;margin-bottom:.6rem">
-          <svg viewBox="0 0 64 64" aria-hidden="true" role="img"><circle cx="32" cy="32" r="30" fill="#1f2a4d" opacity=".5"/></svg>
+          <svg viewBox="0 0 64 64" aria-hidden="true" role="img">
+            <circle cx="32" cy="32" r="30" fill="#1f2a4d" opacity=".5" />
+          </svg>
           <b>Västra RP</b>
         </div>
-        <p style="margin:.2rem 0 1rem"><a class="muted" style="text-decoration:underline" href="mailto:kontakt@vastrarp.se">kontakt@vastrarp.se</a></p>
-        <hr style="border:0;border-top:1px solid var(--border);margin:1rem 0"/>
+        <p style="margin:.2rem 0 1rem"><a class="muted" style="text-decoration:underline"
+            href="mailto:kontakt@vastrarp.se">kontakt@vastrarp.se</a></p>
+        <hr style="border:0;border-top:1px solid var(--border);margin:1rem 0" />
         <div class="muted">© <span id="year"></span>. All rights reserved</div>
       </div>
       <aside style="min-width:200px">
@@ -102,7 +268,7 @@
           <a class="muted" href="faq.html">FAQ</a>
           <a class="muted" href="regler.html">Regler</a>
         </nav>
-        <hr style="border:0;border-top:1px solid var(--border);margin:1rem 0"/>
+        <hr style="border:0;border-top:1px solid var(--border);margin:1rem 0" />
         <div style="display:flex;gap:1rem;flex-wrap:wrap">
           <a class="muted" href="privacy.html">Privacy Policy</a>
           <a class="muted" href="terms.html">Terms of Service</a>
@@ -113,25 +279,29 @@
 
   <script>
     // --- Konfig ---
-    const AUTH_URL = "https://discord.com/oauth2/authorize?client_id=1411631069978951701&response_type=code&redirect_uri=https%3A%2F%2Fvikketv.github.io%2FVastraRP%2Fauth%2Fdiscord&scope=role_connections.write+identify";
+    const AUTH_URL = "https://discord.com/oauth2/authorize?client_id=1411631069978951701&response_type=token&redirect_uri=https%3A%2F%2Fvikketv.github.io%2FVastraRP%2Fauth%2Fdiscord&scope=identify";
     const AUTH_KEY = "vastra_auth"; // localStorage-nyckel (sätts på /auth/discord)
 
     // Allmänt
     document.getElementById('year').textContent = new Date().getFullYear();
-    const $ = (q,ctx=document)=>ctx.querySelector(q);
+    const $ = (q, ctx = document) => ctx.querySelector(q);
 
     // Läs session
-    function getSession(){
-      try{ return JSON.parse(localStorage.getItem(AUTH_KEY)); }catch(_){ return null; }
-    }
-    function setUI(session){
-      const chip = $('#userChip'), nameEl = $('#userName'), loginBtn = $('#loginBtn'), logoutBtn = $('#logoutBtn');
-      if(session){
+    function getSession() { try { return JSON.parse(localStorage.getItem('vastra_auth')); } catch { return null; } }
+
+    function setUI(s) {
+      const chip = document.getElementById('userChip');
+      const nameEl = document.getElementById('userName');
+      const avEl = document.getElementById('userAvatar');
+      const loginBtn = document.getElementById('loginBtn');
+      const logoutBtn = document.getElementById('logoutBtn');
+      if (s) {
         chip.style.display = 'inline-flex';
-        nameEl.textContent = session.name || 'Discord-inloggad';
+        nameEl.textContent = s.global_name || s.username || 'Discord';
+        if (avEl) { avEl.src = s.avatar_url || ''; avEl.style.display = s.avatar_url ? 'block' : 'none'; }
         loginBtn.style.display = 'none';
         logoutBtn.style.display = 'inline-flex';
-      }else{
+      } else {
         chip.style.display = 'none';
         loginBtn.style.display = 'inline-flex';
         logoutBtn.style.display = 'none';
@@ -139,13 +309,13 @@
     }
 
     // Login/Logout
-    $('#loginBtn')?.addEventListener('click', ()=> location.href = AUTH_URL);
-    $('#logoutBtn')?.addEventListener('click', ()=> { localStorage.removeItem(AUTH_KEY); setUI(null); });
+    document.getElementById('loginBtn')?.addEventListener('click', () => location.href = AUTH_URL);
+    document.getElementById('logoutBtn')?.addEventListener('click', () => { localStorage.removeItem('vastra_auth'); setUI(null); });
 
     // Gating för ansökan
-    function goApply(e){
+    function goApply(e) {
       const s = getSession();
-      if(!s){
+      if (!s) {
         e.preventDefault();
         location.href = AUTH_URL; // kräver inloggning först
       }
@@ -154,7 +324,7 @@
     $('#applyBtnHero')?.addEventListener('click', goApply);
 
     // Auto-loginflow om man kom med ?login=required
-    if(new URLSearchParams(location.search).get('login') === 'required'){
+    if (new URLSearchParams(location.search).get('login') === 'required') {
       location.replace(AUTH_URL);
     }
 
@@ -162,4 +332,5 @@
     setUI(getSession());
   </script>
 </body>
+
 </html>
