--- a/auth/discord/index.html/index.html
+++ b/auth/discord/index.html/index.html
@@ -38,8 +38,12 @@
     (async () => {
       try {
         if (err) return showErr('Inloggning avbröts', 'Försök igen.');
-        if (!token) return showErr('Ingen token mottagen', 'Kontrollera Discord-appens OAuth2-inställningar.');
-
+        if (!token) {
+          // Ingen token => implicit flow inte tillåtet eller redirect mismatch
+          console.warn('Ingen access_token. Hash:', location.hash, 'Search:', location.search);
+          return showErr('Ingen token mottagen',
+            'Kontrollera i Discord-portalen: Require OAuth2 Code Grant = AV och att redirect-URL matchar exakt.');
+        }
         $('desc').textContent = 'Hämtar användare…';
         const r = await fetch('https://discord.com/api/users/@me', { headers: { Authorization: `Bearer ${token}` } });
         if(!r.ok) throw new Error('user fetch ' + r.status);
@@ -65,4 +69,3 @@
   </script>
 </body>
 </html>
-
